kubernetes/apps/production/raines-things-api/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raines-things-api
  namespace: production
  labels:
    app.kubernetes.io/name: raines-things-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: raines-things-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
